fixed scroll overflow and merged with dev. dev branch is now behind game lobby :

--- a/src/css/Chat.css
+++ b/src/css/Chat.css
@@ -3,3 +3,12 @@
     background-color: #c4c4c4;
     padding: 2rem;
 }
+
+.chatinput{
+    padding: 2rem;
+}
+
+.messagearea {
+    overflow-y: scroll;
+    height: 200px;
+}
